# jezrastudio

./: .gitattributes  .gitignore  example_env  manage.py  package-lock.json  package.json  pyproject.toml
jezrastudio/: asgi.py  urls.py  wsgi.py
jezrastudio/settings/: base.py  dev.py
jezrastudio/static/css/: input.css  output.css
jezrastudio/static/js/: htmx.min.js.js
jezrastudio/templates/: Reusable-base.html  Reusable-template.html
portfolio/: urls.py  views.py
portfolio/templates/: homepage.html  portfolio_base.html
portfolio/templates/components/: dock.html  home_dock.html
portfolio/templates/pages/: about-me.html  blog.html  homepage.html  projects.html  resume.html
portfolio/templates/partials/: contact-me.html  hero.html  latest-articles.html  pinned-projects.html
