[project]
name = "jezrastudio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url==3.1.0",
    "django>=6.0.1",
    "django-browser-reload==1.21.0",
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "django-watchfiles==1.4.0",
    "gunicorn==24.1.1",
    "psycopg2-binary>=2.9.11",
    "pytest==9.0.2",
    "python-dotenv>=1.2.1",
    "whitenoise==6.11.0",
]
